Thu Dec 13 19:32:31 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataSampleHeader.inl:
        * dds/DCPS/DataSampleHeader.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/transport/framework/PacketRemoveVisitor.cpp:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Fixed some Coverity warnings.

Wed Dec 12 22:16:36 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          Fixed leak of type name string when removing multitopic.

Wed Dec 12 21:55:09 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/MultiTopicDataReaderBase.cpp:
        * dds/DCPS/SubscriberImpl.h:
        * dds/DCPS/SubscriberImpl.cpp:

          Corrected cleanup of data readers created
          internally by the multi topic data reader.

        * tests/DCPS/MultiTopic/MultiTopicTest.cpp:

          Test with separate domain participants for the
          publishing and subscribing parts of the application.

Mon Dec 10 21:43:28 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/InstanceState.h:
        * dds/DCPS/InstanceState.cpp:
        * dds/DCPS/OwnershipManager.h:
        * dds/DCPS/OwnershipManager.cpp:
        * dds/idl/CPPTemplate.txt:

          Corrected some issues with object lifecycle when using exclusive
          ownership QoS: the DataReaderImpl must be unregistered from the
          OwnershipManager at the right time, and the InstanceState must be
          removed from the OwnershipManager before it (InstanceState) goes away.

Thu Dec  6 17:48:36 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/SetQosDeadline/publisher.cpp:
        * tests/DCPS/SetQosDeadline/subscriber.cpp:

          Fixed a test synchronization issue that
          resulted in intermittent failures.

Wed Dec  5 21:57:56 UTC 2012  Adam Mitz  <mitza@ociweb.com>
